# claude-academic-research

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
scripts/core/: config_loader.py  config_writer.py  llm.py
scripts/debug/: inspect_scopus_abstract.py
scripts/pipelines/: abstract_screen.py  apply_qa_adjudications.py  attach_pdfs.py  audit_zotero_library.py  bbt_client.py  build_journal_list_from_abs.py  csv_io.py  csv_summary.py  enrich_abstracts.py  enrich_dois.py  enrich_pdfs.py  export_coded_includes.py  fetch_abstracts.py  fetch_pdfs_browser.py  fetch_pdfs_wiley_tdm.py  filter_search_results.py  fulltext_code.py  generate_bib.py  http_client.py  import_to_zotero.py  log_schemas.py  pdf_fetch_log.py  pdf_text_cache.py  pilot_analyze.py  screening_report.py  search.py  search_openalex.py  search_scopus.py  search_semantic_scholar.py  search_wos.py  zotero_io.py
scripts/publishers/: registry.py
scripts/setup/: add_deny_rules.py  check_configured.py  check_database_access.py  check_deny_rules.py  check_project_scaffold.py  ensure_dir.py  install_templates.py  scaffold_project.py  wizard.py
scripts/sources/: predatory.py
skills/: _glossary.md
skills/academic-style/: SKILL.md
skills/academic-writing/: SKILL.md
skills/critic-loop/: SKILL.md
templates/: _tables.py  manuscript.qmd  manuscript_claude_md.md  manuscript_stats.py  manuscript_tables.py  screening_config.py  search_config.py  sr_claude_md.md  stats.py  tables.py  test_citations.py  test_common.py  test_empirical_integrity.py  test_suite.py  test_systematic_review.py
tests/: conftest.py
(+106 files in other folders)
